src/objects/Business_Driver__c.object
<CustomObject>
    <description>TOOLKIT: An object to capture business drivers related to a release and a capability.</description>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <description>Business Drivers and their details</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Driver</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <description>Capabilities which will help enable the Business Driver</description>
        <inlineHelpText>Select the Capability or Capabilities that will help enable the Business Driver.</inlineHelpText>
        <label>Capability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Campaign Management</fullName>
                </value>
                <value>
                    <fullName>Contact Management</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Lead Management</fullName>
                </value>
                <value>
                    <fullName>Opportunity Management</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Business Drivers</relationshipLabel>
        <relationshipName>Business_Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related release to the business driver</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Business Driver</relationshipLabel>
        <relationshipName>Business_Driver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOURCE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOURCE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Driver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Driver__c</columns>
        <columns>Capability__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>